# bora

./: .git-ftp-include  .gitignore  Gemfile  LICENSE  README.md  _config.yml  app.py  bora_helper.py  cache.yaml  core.py  designer.html  designer_master.html  login.html  master_settings.yaml  opa.py  parser.py  redis.html  requirements.txt  requirements_py27.txt  start.py  status.html  status_master.html  style.yaml  test.py  varname.yaml
.github/workflows/: jekyll.yml
blueprint/: designer.html  status.html
blueprint/static/: jquery-ui.min.css  style.css
docs/source/: conf.py
function/adei/: lambda.yaml
function/box/: lambda.yaml
function/button/: lambda.yaml
function/calc/: lambda.yaml
function/clone/: lambda.yaml
js_plugins/: adei.js  button.js  calc.js  clone.js  graph.js  hls.js  icon.js  integer_to_string.js  readonly.js  rest.js  virtual.js
res/: adei2rest.py  config_mysql.yaml  requirements_py27.txt  style_stable.yaml  varname_sql.yaml  varname_stable.yaml
res/rtsp_streaming/rtsp_source/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  rtsp.c
static/: style.css
template/: .adei.html.swp  README.md  adei.html  box.html  button.html  calc.html  clone.html  hls.html  icon.html  iframe.html  input.html  integer_to_string.html  readonly.html  rest.html  rtsp.html  text.html  virtual.html
typedef/: adei.yaml  box.yaml  button.yaml  calc.yaml  clone.yaml  graph.yaml  icon.yaml  iframe.yaml  input.yaml  integer_to_string.yaml  readonly.yaml  rest.yaml  rtsp.yaml  text.yaml  virtual.yaml
utils/: bora_helper.py
(+71 files in other folders)
